<resources>
    <string name="app_name">Tres en Raya</string>
    <string name="tres_en_raya">Tres en Raya</string>
    <string name="volver_jugar">Volver a jugar</string>
    <string name="tu">TU</string>
    <string name="bot">BOT</string>
    <string name="_0">0</string>
    <string name="reiniciar">REINICIAR</string>
    <string name="dificil">Dificil</string>
    <string name="iniciar">INICIAR</string>
</resources>